<?xml version="1.0"?>
<package format="2">
  <name>mavros_rgbled</name>
  <version>0.3.0</version>
  <description>Plugin for MAVROS to control RGB LED</description>

  <maintainer email="standmit@zabstrannik.ru">Andrey Stepanov</maintainer>

  <license>MIT</license>

  <author email="standmit@zabstrannik.ru">Andrey Stepanov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mavros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>pluginlib</depend>

  <export>
    <mavros plugin="${prefix}/plugin.xml" />
  </export>
</package>
