<?xml version="1.0"?>
<package format="2">
  <name>mavros_notify</name>
  <version>0.3.1</version>
  <description>Plugins for MAVROS to control RGB LED and Buzzer</description>

  <maintainer email="standmit@zabstrannik.ru">Andrey Stepanov</maintainer>

  <license>MIT</license>

  <author email="standmit@zabstrannik.ru">Andrey Stepanov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mavros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>pluginlib</depend>

  <export>
    <mavros plugin="${prefix}/plugins.xml" />
  </export>
</package>
